--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "gulpfile.js",
   "author": "Nicholas Ruggeri",
   "devDependencies": {
-    "gulp": "^3.8.8",
-    "gulp-sass": "^0.7.3",
     "browser-sync": "^1.3.7",
+    "gulp": "^3.8.8",
     "gulp-autoprefixer": "1.0.0",
     "gulp-concat": "^2.5.2",
     "gulp-rename": "^1.2.2",
-    "gulp-uglify": "^1.2.0"
+    "gulp-sass": "^0.7.3",
+    "gulp-uglify": "^1.2.0",
+    "run-sequence": "^1.1.0"
   },
   "repository": {
     "type": "git",
