update config jekyll

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,3 @@
 name: Jekyll Gulp Starter Kit
-source: ./_src
-destination: ./site
-exclude: ["node_modules", "gulpfile.js", "package.json", "README.md"]
+source: src
+destination: web
