--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,6 @@
     "tests"
   ],
   "dependencies": {
-    "cookies-enabler": "0.1.3",
-    "normalize-scss": "3.0.3"
+    "jquery": "2.1.4"
   }
 }
